# centrality

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  Makefile_sdk_controlplane  README.md  ast_transform.py  compose-override-mountcode.yaml  compose.yaml  fly-agent-cluster.toml  fly-canary.toml  fly.toml  pre-commit  sdk_example.py  sdk_test.py
cli/: Makefile  README.md  pyproject.toml
cli/cli/: cli.py
cli/cli/assistant/: SYSTEM_PROMPT.txt  ast_explore.py  main.py  sandbox.py
cli/cli/assistant/code_samples/: avg_cpu_table.generated  avg_cpu_table.prompt  avg_cpu_table_subclass1.generated  avg_cpu_table_subclass1.prompt
cli/cli/assistant_explore/: README.md  SYSTEM_PROMPT.txt  ast_explore.py  docs.md  main.py  sandbox.py  sdk_docs.py
cli/cli/assistant_explore/code_samples/: avg_cpu_table_subclass1_edited.py
cli/cli/assistant_explore/promote/: framework.py  sandbox.py
common/: Makefile  README.md  pyproject.toml
common/common/: cli_utils.py  constants.py
common/common/config/: README.md  config.py  config_tests.py  dict_utils.py
common/common/sdks/controlplane/: openapi.json  sdk.py
common/common/sdks/controlplane/controlplane-openapi-generator-pydantic-v1/: README.md  pyproject.toml  setup.py
common/common/sdks/controlplane/controlplane-openapi-generator-pydantic-v1/docs/: DefaultApi.md  OkResponse.md
common/common/sdks/controlplane/controlplane-openapi-generator-pydantic-v1/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
common/common/sdks/controlplane/controlplane-openapi-generator-pydantic-v1/test/: test_cpu_measurement.py  test_default_api.py  test_http_validation_error.py  test_ok_response.py  test_validation_error.py  test_validation_error_loc_inner.py
common/common/sdks/controlplane/controlplane-openapi-generator-python/: README.md  pyproject.toml  setup.py
common/common/sdks/controlplane/controlplane-openapi-generator-python/.openapi-generator/: FILES
common/common/sdks/controlplane/controlplane-openapi-generator-python/docs/: CpuMeasurement.md
common/common/sdks/controlplane/controlplane-openapi-generator-python/openapi_client/: api_client.py  configuration.py  rest.py
common/common/sdks/controlplane/controlplane-openapi-generator-python/test/: test_cpu_measurement.py  test_default_api.py  test_http_validation_error.py  test_ok_response.py  test_validation_error.py  test_validation_error_loc_inner.py
common/common/sdks/controlplane/handwritten/: config.py  sdk.py
common/common/types/: machinemetrics.py  vmmetrics.py
common/common/utils/: wait_for_healthy.py
common/types/: vmmetrics.py
controlplane/: .ruff.toml  Makefile  README.md  openapi.json  pyproject.toml
controlplane/alembic/: env.py
controlplane/controlplane/: CODEGEN.md  actorsystem.py  cli.py  codegen.py  constants.py
controlplane/controlplane/actors/: datastore_sweeper.py  previewer.py
controlplane/controlplane/codegenvars/: cpu.py  memory.py
controlplane/controlplane/datastore/: Makefile  README.md  client.py  client.template  config.py  metrics_client.py  test.py
controlplane/controlplane/datastore/types/: auth.py  base.py  heartbeats.py  machine_info.py  previewer.py  utils.py  vmliveness.py  vmmetrics.py
controlplane/controlplane/datastore/types/metrics/: metric.py  types.template
controlplane/controlplane/datastore/types/vmmetrics/: cpu.py  diskiops.py  diskmb.py  diskthroughput.py  gpumemory.py  gpuutilization.py  memory.py  metric.py  network.py  template.bk  template.py  template_generate.py  types.template
controlplane/controlplane/datastore/types/vmmetrics/vars/: cpu.py  diskiops.py  diskmb.py  diskthroughput.py  gpumemory.py  gpuutilization.py  memory.py  network.py
controlplane/controlplane/rest/: api.py  api_test.py  apid.py  auth.py  config.py  rest.template
controlplane/controlplane/rest/example/: api.py
controlplane/controlplane/rest/previewer/: api.py
controlplane/controlplane/rest/utils/: auth.py
controlplane/tests/: utils.py
controlplane/tests/manual/: README.md  datastore_tests.py
deploy/: Makefile  README.md  pyproject.toml  requirements.txt
deploy/aws/: create_iam_role.py  create_security_group.py  launch_ttl_instance.py  resources.yaml
deploy/deploy/aws/: config.py  config.yaml  constants.py  iam.py  instances.py  security_group.py
deploy/deploy/canary/: README.md  canary.py
docs/: Machine_Concepts_and_Lifecycle.md  VM_Concepts_and_Lifecycle.md
previewer/: Makefile  (+2 more)
rapidui/: Makefile  README.md  TESTING.md  cards.py  config_util.py  launch.bash  old_cluster.py  pyproject.toml
rapidui/.streamlit/: config.toml
rapidui/configs/: dev.yaml
rapidui/rapidui/: Home.py  app.css  cardfill.css  header.py
rapidui/rapidui/.streamlit/: config.toml
rapidui/rapidui/pages/: 1_Cluster.py  2_Machine.py  2_Machine_-_CPU.py
scripts/: CODEGEN.md  Makefile  README.md  generate_sdks.py  gpu_work.py  pyproject.toml  requirements.txt  sync_file_with_vm.py  sync_with_remote.py  upgrade_conclib.py  upgrade_dep.py
scripts/scripts/: cli.py  gpu_work.py  upgrade_dep.py
scripts/scripts/codegen/: CODEGEN.md  codegen.py  constants.py  template_vars.py  templating.py
scripts/scripts/codegen/codegenvars/: cpu.py  diskiops.py  diskmb.py  diskthroughput.py  gpumemory.py  gpuutilization.py  memory.py  network.py  nvidiasmi.py
scripts/scripts/gpt/: chat.py  chati.py  chats.py  chatx.py  lib.py  persistence.py
vmagent/: Makefile  README.md  pyproject.toml
vmagent/vmagent/: actorsystem.py  cli.py  config.py
vmagent/vmagent/actors/: heartbeat.py  template.py
vmagent/vmagent/actors/metrics/: config.py  cpu.py  diskio.py  diskmb.py  faketrics.py  gpu.py  memory.py  network.py  nvidia_smi.py
vmagent/vmagent/actors/metrics/samplers/: cli.py  cpu.py  diskio.py  diskmb.py  gpu.py  memory.py  net.py  network.py  nvidia_smi.py  sampler.py
vmagent/vmagent/machineinfo/: cpu.py  fake.py  gpu.py  machineinfo.py  real.py  test_fake_config.yaml
vmagent/vmagent/metrics/: cli.py  collector.py  cpu.py  disk.py  gpu.py  memory.py  net.py
vmagent/vmagent/rest/: api.py  config.py
(+188 files in other folders)
