[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "centrality-cli"
version = "0.0.1"
authors = [
    {name = "Armand McQueen", email = "armandmcqueen@gmail.com"},
]
description = "Centrality CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "centrality-common ~= 0.0.1",
    "rich ~= 13.7.0",
    "typer ~= 0.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff ~= 0.1.7",
    "flit ~= 3.9.0",
]

[tool.flit.module]
name = "cli"