[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "centrality-controlplane"
version = "0.0.1"
authors = [
    {name = "Armand McQueen", email = "armandmcqueen@gmail.com"},
]
description = "Centrality control plane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "conclib == 0.0.7",
    "SQLAlchemy ~= 2.0.23",
    "psycopg2-binary ~= 2.9.9",
    "pydantic ~= 2.5.2",
    "fastapi ~= 0.104.1",
    "uvicorn[all] ~= 0.24.0.post1",
    "requests ~= 2.31.0",
    "rich ~= 13.7.0",
    "typer[all] ~= 0.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff ~= 0.1.7",
    "flit ~= 3.9.0",
    "docker ~= 7.0.0",
]

[tool.flit.module]
name = "controlplane"