[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "centrality-deploy"
version = "0.0.1"
authors = [
    {name = "Armand McQueen", email = "armandmcqueen@gmail.com"},
]
description = "Centrality deploy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "centrality-common ~= 0.0.1",
    "requests ~= 2.31.0",
    "rich ~= 13.7.0",
    "boto3 ~- 1.34.7",
    "typer[all] ~= 0.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff ~= 0.1.7",
    "flit ~= 3.9.0",
    "docker ~= 7.0.0",
]

[tool.flit.module]
name = "deploy"