[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "centrality-rapidui"
version = "0.0.1"
authors = [
    {name = "Armand McQueen", email = "armandmcqueen@gmail.com"},
]
description = "Centrality Rapid UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit ~= 1.29.0",
    "centrality-common ~= 0.0.1",
    "typer[all] ~= 0.9.0",
    "humanize ~= 4.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff ~= 0.1.7",
    "flit ~= 3.9.0",
    "watchdog ~= 3.0.0",
    "mypy ~= 1.8.0",
]

[tool.flit.module]
name = "rapidui"