[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "centrality-vmagent"
version = "0.0.1"
authors = [
    {name = "Armand McQueen", email = "armandmcqueen@gmail.com"},
]
description = "Centrality VM Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "centrality-common ~= 0.0.1",
    "conclib == 0.0.9",
    "rich ~= 13.7.0",
    "typer[all] ~= 0.9.0",
    "psutil ~= 5.9.6",
]

[project.optional-dependencies]
dev = [
    "ruff ~= 0.1.7",
    "flit ~= 3.9.0",
]

[tool.flit.module]
name = "vmagent"